# while-interpreter

./: .gitignore  Ast.fs  Evaluator.fs  FixPoint.fs  Interp.fs  Lexer.fs  Lexer.fsl  Parser.fsy  Program.fs  README.md  WhileInterpreter.sln  while-interpreter.sln
FSharp/: Ast.fs  Lexer.fsl  Parser.fs  Parser.fsi  Parser.fsy  README.md  WhileInterpreter.fsproj  while-interpreter.fsproj
FSharp/examples/: simple.txt  whileloop.txt
Haskell/while-interpreter/: example2.txt  stack.yaml  while-interpreter.cabal
Haskell/while-interpreter/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/while-interpreter/src/: Main  Main.hs
Haskell/while-interpreter/src/Eval/: EvalAexpr.hs  EvalBexpr.hs  Evaluator.hs  FixPoint.hs
Haskell/while-interpreter/src/Interp/: Interp.hs
Haskell/while-interpreter/src/Iteractive/: Iteractive.hs  Pretty.hs
Haskell/while-interpreter/src/Parser/: Ast.hs  Parser.hs
Properties/: launchSettings.json
