cabal-version:       2.2

name:                while-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/while-interpreter#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alessandro Pirolo
maintainer:          piroloalessandro81@gmail.com
copyright:           2024 Alessandro Pirolo
category:            Web
build-type:          Simple

library
  hs-source-dirs:   src
  exposed-modules:
      Main
  build-depends:       
      base >= 4.7 && < 5,

executable while-interpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
